--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>ZeptoClone</title>
   </head>
   <body>
-    <div></div>
+    <div class="container">
+      <div id="navbar"></div>
+      <div id="sideBar"></div>
+      <div id="mainContainer"></div>
+      </div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
